2018-10-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (_parse_htmlxref_files) [TEST]:
	Strip leading directories from file name in order to have 
	reliable reference test results for out-of-source builds.

2018-10-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line) <@columnfractions>: Set the 
	'columnfractions' extra value to the element for the 
	@columnfractions command, rather than to the 'misc_args' array 
	of that element.  This is to make a 'misc_args' array only 
	referenced by one element, which makes it possible to free the 
	memory properly in the C rewrite.

	* tp/Texinfo/Convert/DocBook.pm (_convert),
	* tp/Texinfo/Convert/HTML.pm (_convert_tab_command),
	* tp/Texinfo/Convert/Plaintext.pm (_convert),
	* tp/Texinfo/Convert/TexinfoXML.pm (_convert): Update.

2018-10-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/README: Add more advice.

2018-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/test_utils.pl: Set 'TEST' to 1 for converters.

2018-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/htmlxref
	* tp/tests/htmlxref-only_mono,
	* tp/tests/htmlxref-only_split: Remove.
	* tp/tests/Makefile.am: Remove rules for copying htmlxref.cnf to 
	the build directory.
	* configure.ac (AC_CONFIG_FILES): Don't list Makefiles in 
	removed directories.
	* autogen.sh: Excise htmlxref and coverage subdirectories.

2018-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/94htmlxref.t (htmlxref_only_mono, htmlxref_only_mono_nodes)
	(htmlxref_only_split, htmlxref_only_split_nodes): Add.

2018-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/94htmlxref.t (htmlxref_nodes): Add test.

2018-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/94htmlxref.t: New file.
	* tp/t/94htmlxref.t (htmlxref): New test.

	* tp/Texinfo/Convert/HTML.pm [TEST]: If HTMLXREF is set, look 
	for file in various directories.

2018-09-30  Gavin Smith  <gavinsmith0123@gmail.com>
