@@ -1,3 +1,9 @@
+2018-10-09  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* configure.ac: Remove AM_CONDITIONAL for TEXI2HTML.
+	* Makefile.am (dist-local): Remove reult for updating 
+	translations for texi2html.
+
 2018-10-08  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* tp/Texinfo/Convert/HTML.pm (_parse_htmlxref_files) [TEST]:
